Update some fixs

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@ and open the template in the editor.
                             <code>2.0.2</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.0.2/css/material-design-iconic-font.min.css</span></br>
                             <code>2.0.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.0.1/css/material-design-iconic-font.min.css</span></br>
                             <code>2.0.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.0.0/css/material-design-iconic-font.min.css</span></br>
+                            <code>1.1.1</code>       <span class="c">//Deprecated </span>
                         </p>
                     </div>
                 </div>
